# PyAPplus64

./: .gitignore  Changelog.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml
docs/: builddocs.sh  builddocspdf.sh
docs/source/: abhaengigkeiten.rst  anwendungen.rst  beschreibung.rst  conf.py  examples.rst  index.rst
examples/: adhoc_report.py  applus-server.yaml  applus_configs.py  check_dokumente.py  complete_sql.pyw  copy_artikel.py  importViewUDF.py  importViewUDFDeploy.pyw  importViewUDFTest.pyw  mengenabweichung.py  mengenabweichung_gui.pyw  read_settings.py
src/PyAPplus64/: __init__.py  applus.py  applus_db.py  applus_job.py  applus_scripttool.py  applus_server.py  applus_sysconf.py  applus_usexml.py  duplicate.py  pandas.py  sql_utils.py  utils.py
tests/: test_applus_db.py  test_sql_utils.py
